# Navbaria

./: CMakeLists.txt  Calendar.cpp  Calendar.h  Clock.h  Files.qrc  Including.h  MainQML.qml  PC_Menu.h  README.md  RobotoMono-Bold.qrc  clock.cpp  main.cpp  pc_menu.cpp  style.css
styles/CSS-QML/: button.style.css  button.style.txt  main_button.css  style.css
